[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/characters/enemies/enemy_fries_idle.png" type="Texture" id=1]
[ext_resource path="res://assets/characters/enemies/enemy_burger_idle.png" type="Texture" id=2]
[ext_resource path="res://assets/characters/enemies/enemy_pizza_idle.png" type="Texture" id=3]
[ext_resource path="res://assets/characters/enemies/enemy_donut_idle.png" type="Texture" id=4]
[ext_resource path="res://scenes/environment/RandomFood.gd" type="Script" id=5]
[ext_resource path="res://utils/MultiAudioPlayer.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/sfx/combat/enemy_eat_1.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/sfx/combat/enemy_eat_5.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/sfx/combat/enemy_eat_6.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/sfx/combat/enemy_eat_3.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/sfx/combat/enemy_eat_2.wav" type="AudioStream" id=11]
[ext_resource path="res://assets/sfx/combat/enemy_eat_4.wav" type="AudioStream" id=12]
[ext_resource path="res://assets/sfx/combat/player/player_hurt_1.wav" type="AudioStream" id=13]
[ext_resource path="res://assets/sfx/combat/player/player_hurt_2.wav" type="AudioStream" id=14]
[ext_resource path="res://assets/sfx/combat/player/player_hurt_4.wav" type="AudioStream" id=15]
[ext_resource path="res://assets/sfx/combat/player/player_hurt_3.wav" type="AudioStream" id=16]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "0",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "1",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "2",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "3",
"speed": 5.0
} ]

[sub_resource type="AudioStreamRandomPitch" id=3]
resource_local_to_scene = true

[sub_resource type="AudioStreamRandomPitch" id=4]
resource_local_to_scene = true

[node name="RandomFood" type="AnimatedSprite"]
frames = SubResource( 1 )
animation = "1"
script = ExtResource( 5 )

[node name="EatSFX" parent="." instance=ExtResource( 6 )]
stream = SubResource( 3 )
audio_streams = [ ExtResource( 7 ), ExtResource( 11 ), ExtResource( 10 ), ExtResource( 12 ), ExtResource( 8 ), ExtResource( 9 ) ]

[node name="HitSFX" parent="." instance=ExtResource( 6 )]
stream = SubResource( 4 )
volume_db = 7.866
audio_streams = [ ExtResource( 13 ), ExtResource( 14 ), ExtResource( 16 ), ExtResource( 15 ) ]

[connection signal="finished" from="EatSFX" to="." method="_on_EatSFX_finished"]
